src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SAMPLER

Grammar

Rule 0     S' -> start
Rule 1     start -> translation_unit
Rule 2     translation_unit -> block_decl translation_unit
Rule 3     translation_unit -> function_def translation_unit
Rule 4     translation_unit -> empty
Rule 5     block_decl -> type_decl SEMICOLON
Rule 6     block_decl -> variable_decl SEMICOLON
Rule 7     block_decl -> constant_decl SEMICOLON
Rule 8     block_decl -> function_decl SEMICOLON
Rule 9     type_decl -> type_alias_decl
Rule 10    type_decl -> struct_decl
Rule 11    type_decl -> interface_decl
Rule 12    type_alias_decl -> TYPE ID ASSIGN type_spec
Rule 13    variable_decl -> LET declarator declarator_nest
Rule 14    declarator_nest -> COMMA declarator declarator_nest
Rule 15    declarator_nest -> empty
Rule 16    constant_decl -> CONST declarator declarator_nest
Rule 17    declarator -> ID type_spec_colon_opt ASSIGN expression
Rule 18    type_spec_colon_opt -> COLON type_spec
Rule 19    type_spec_colon_opt -> empty
Rule 20    function_decl -> FUNC ID function_sign
Rule 21    function_def -> function_decl block_statement
Rule 22    type_spec -> simple_type
Rule 23    type_spec -> complex_type
Rule 24    type_spec -> generic_type
Rule 25    type_spec -> alias_type
Rule 26    type_spec -> array_type
Rule 27    type_spec -> reference_type
Rule 28    type_spec -> function_type
Rule 29    simple_type -> VOID
Rule 30    simple_type -> BOOL
Rule 31    simple_type -> I8
Rule 32    simple_type -> U8
Rule 33    simple_type -> I16
Rule 34    simple_type -> U16
Rule 35    simple_type -> I32
Rule 36    simple_type -> U32
Rule 37    simple_type -> I64
Rule 38    simple_type -> U64
Rule 39    simple_type -> F16
Rule 40    simple_type -> F32
Rule 41    simple_type -> F64
Rule 42    complex_type -> INTERFACEID generics_specialization_list_opt
Rule 43    complex_type -> STRUCTID generics_specialization_list_opt
Rule 44    generic_type -> GENERICID
Rule 45    alias_type -> TYPEALIASID
Rule 46    array_type -> type_spec LBRACKET int_literal_opt RBRACKET
Rule 47    int_literal_opt -> INT
Rule 48    int_literal_opt -> empty
Rule 49    reference_type -> type_spec REF
Rule 50    function_type -> function_sign
Rule 51    struct_decl -> STRUCT ID new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE
Rule 52    new_struct -> <empty>
Rule 53    complex_type_colon_opt -> COLON complex_type
Rule 54    complex_type_colon_opt -> empty
Rule 55    interface_decl -> INTERFACE ID new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE
Rule 56    new_interface -> <empty>
Rule 57    generics_type_list_opt -> generics_type_list
Rule 58    generics_type_list_opt -> empty
Rule 59    member_decl_nest -> member_decl member_decl_nest
Rule 60    member_decl_nest -> empty
Rule 61    interface_member_decl_nest -> interface_member_decl interface_member_decl_nest
Rule 62    interface_member_decl_nest -> empty
Rule 63    member_decl -> member_declarator
Rule 64    member_decl -> function_def
Rule 65    member_decl -> type_function_def
Rule 66    type_function_def -> type_function_decl block_statement
Rule 67    interface_member_decl -> function_decl SEMICOLON
Rule 68    interface_member_decl -> type_function_decl SEMICOLON
Rule 69    type_function_decl -> FUNC type_spec function_sign
Rule 70    member_declarator -> ID COLON type_spec SEMICOLON
Rule 71    function_sign -> generics_type_list_opt LPAREN parameter_decl_list_opt RPAREN type_spec_assigntype_opt
Rule 72    parameter_decl_list_opt -> parameter_decl parameter_decl_comma_nest
Rule 73    parameter_decl_list_opt -> empty
Rule 74    type_spec_assigntype_opt -> ASSIGNTYPE type_spec
Rule 75    type_spec_assigntype_opt -> empty
Rule 76    parameter_decl_comma_nest -> COMMA parameter_decl parameter_decl_comma_nest
Rule 77    parameter_decl_comma_nest -> empty
Rule 78    parameter_decl -> ID type_spec_colon_opt
Rule 79    generics_type_list -> LANGRBRACKET generics_type generics_type_comma_nest RANGRBRACKET
Rule 80    generics_type_comma_nest -> COMMA generics_type generics_type_comma_nest
Rule 81    generics_type_comma_nest -> empty
Rule 82    generics_type -> ID generics_type_range_colon_opt
Rule 83    generics_type_range_colon_opt -> COLON generics_type_range
Rule 84    generics_type_range_colon_opt -> empty
Rule 85    generics_type_range -> complex_type
Rule 86    statement -> decl_statement
Rule 87    statement -> block_statement
Rule 88    statement -> expression_statement
Rule 89    statement -> if_statement
Rule 90    statement -> iteration_statement
Rule 91    statement -> jump_statement
Rule 92    decl_statement -> variable_decl SEMICOLON
Rule 93    decl_statement -> constant_decl SEMICOLON
Rule 94    block_statement -> LBRACE statement_nest RBRACE
Rule 95    statement_nest -> statement statement_nest
Rule 96    statement_nest -> empty
Rule 97    expression_statement -> expression_opt SEMICOLON
Rule 98    expression_opt -> expression
Rule 99    expression_opt -> empty
Rule 100   if_statement -> IF LPAREN expression RPAREN statement statement_else_opt
Rule 101   statement_else_opt -> ELSE statement
Rule 102   statement_else_opt -> empty
Rule 103   iteration_statement -> while_clause
Rule 104   iteration_statement -> for_clause
Rule 105   while_clause -> WHILE LPAREN expression RPAREN statement
Rule 106   for_clause -> FOR LPAREN for_init_statement expression_opt SEMICOLON expression RPAREN statement
Rule 107   for_init_statement -> expression_statement
Rule 108   for_init_statement -> decl_statement
Rule 109   jump_statement -> BREAK SEMICOLON
Rule 110   jump_statement -> CONTINUE SEMICOLON
Rule 111   jump_statement -> RETURN expression_opt SEMICOLON
Rule 112   expression -> assign_expr
Rule 113   expression -> binary_expr
Rule 114   expression -> unary_expr
Rule 115   assign_expr -> expression ASSIGN expression
Rule 116   binary_expr -> expression PLUS expression
Rule 117   binary_expr -> expression MINUS expression
Rule 118   binary_expr -> expression MUL expression
Rule 119   binary_expr -> expression DIV expression
Rule 120   binary_expr -> expression AND expression
Rule 121   binary_expr -> expression OR expression
Rule 122   binary_expr -> expression XOR expression
Rule 123   binary_expr -> expression MOD expression
Rule 124   binary_expr -> expression LSHIFT expression
Rule 125   binary_expr -> expression RSHIFT expression
Rule 126   binary_expr -> expression LOGICAL_OR expression
Rule 127   binary_expr -> expression LOGICAL_AND expression
Rule 128   binary_expr -> expression NOT_EQUAL expression
Rule 129   binary_expr -> expression EQUAL expression
Rule 130   binary_expr -> expression LESS_EQUAL expression
Rule 131   binary_expr -> expression LESS expression
Rule 132   binary_expr -> expression GREATER_EQUAL expression
Rule 133   binary_expr -> expression GREATER expression
Rule 134   unary_expr -> unary_operation_opt primary_expr
Rule 135   unary_operation_opt -> NOT
Rule 136   unary_operation_opt -> LOGICAL_NOT
Rule 137   unary_operation_opt -> PLUS
Rule 138   unary_operation_opt -> MINUS
Rule 139   unary_operation_opt -> empty
Rule 140   primary_expr -> operand
Rule 141   primary_expr -> call_expr
Rule 142   primary_expr -> index_expr
Rule 143   primary_expr -> cast_expr
Rule 144   primary_expr -> new_expr
Rule 145   primary_expr -> member_expr
Rule 146   primary_expr -> io_expr
Rule 147   operand -> INT
Rule 148   operand -> HEXADECIMAL
Rule 149   operand -> FLOAT
Rule 150   operand -> DOUBLE
Rule 151   operand -> STRING
Rule 152   operand -> ID
Rule 153   operand -> LPAREN expression RPAREN
Rule 154   member_expr -> ID DOT ID
Rule 155   index_expr -> primary_expr LBRACKET expression RBRACKET
Rule 156   cast_expr -> LPAREN type_spec RPAREN expression
Rule 157   new_expr -> type_spec LPAREN parameter_list_opt RPAREN
Rule 158   parameter_list_opt -> parameter_list
Rule 159   parameter_list_opt -> empty
Rule 160   call_expr -> primary_expr LPAREN parameter_list_opt RPAREN
Rule 161   call_expr -> primary_expr LANGRBRACKET type_spec type_spec_comma_nest RANGRBRACKET LPAREN parameter_list_opt RPAREN
Rule 162   generics_specialization_list_opt -> LANGRBRACKET type_spec type_spec_comma_nest RANGRBRACKET
Rule 163   generics_specialization_list_opt -> empty
Rule 164   type_spec_comma_nest -> COMMA type_spec type_spec_comma_nest
Rule 165   type_spec_comma_nest -> empty
Rule 166   parameter_list -> expression expression_comma_nest
Rule 167   expression_comma_nest -> COMMA expression expression_comma_nest
Rule 168   expression_comma_nest -> empty
Rule 169   io_expr -> in_out LANGRBRACKET type_spec RANGRBRACKET LPAREN STRING RPAREN
Rule 170   in_out -> IN
Rule 171   in_out -> OUT
Rule 172   empty -> <empty>

Terminals, with rules where they appear

AND                  : 120
ASSIGN               : 12 17 115
ASSIGNTYPE           : 74
BOOL                 : 30
BREAK                : 109
COLON                : 18 53 70 83
COMMA                : 14 76 80 164 167
CONST                : 16
CONTINUE             : 110
DIV                  : 119
DOT                  : 154
DOUBLE               : 150
ELSE                 : 101
EQUAL                : 129
F16                  : 39
F32                  : 40
F64                  : 41
FLOAT                : 149
FOR                  : 106
FUNC                 : 20 69
GENERICID            : 44
GREATER              : 133
GREATER_EQUAL        : 132
HEXADECIMAL          : 148
I16                  : 33
I32                  : 35
I64                  : 37
I8                   : 31
ID                   : 12 17 20 51 55 70 78 82 152 154 154
IF                   : 100
IN                   : 170
INT                  : 47 147
INTERFACE            : 55
INTERFACEID          : 42
LANGRBRACKET         : 79 161 162 169
LBRACE               : 51 55 94
LBRACKET             : 46 155
LESS                 : 131
LESS_EQUAL           : 130
LET                  : 13
LOGICAL_AND          : 127
LOGICAL_NOT          : 136
LOGICAL_OR           : 126
LPAREN               : 71 100 105 106 153 156 157 160 161 169
LSHIFT               : 124
MINUS                : 117 138
MOD                  : 123
MUL                  : 118
NOT                  : 135
NOT_EQUAL            : 128
OR                   : 121
OUT                  : 171
PLUS                 : 116 137
RANGRBRACKET         : 79 161 162 169
RBRACE               : 51 55 94
RBRACKET             : 46 155
REF                  : 49
RETURN               : 111
RPAREN               : 71 100 105 106 153 156 157 160 161 169
RSHIFT               : 125
SAMPLER              : 
SEMICOLON            : 5 6 7 8 67 68 70 92 93 97 106 109 110 111
STRING               : 151 169
STRUCT               : 51
STRUCTID             : 43
TYPE                 : 12
TYPEALIASID          : 45
U16                  : 34
U32                  : 36
U64                  : 38
U8                   : 32
VOID                 : 29
WHILE                : 105
XOR                  : 122
error                : 

Nonterminals, with rules where they appear

alias_type           : 25
array_type           : 26
assign_expr          : 112
binary_expr          : 113
block_decl           : 2
block_statement      : 21 66 87
call_expr            : 141
cast_expr            : 143
complex_type         : 23 53 85
complex_type_colon_opt : 51
constant_decl        : 7 93
decl_statement       : 86 108
declarator           : 13 14 16
declarator_nest      : 13 14 16
empty                : 4 15 19 48 54 58 60 62 73 75 77 81 84 96 99 102 139 159 163 165 168
expression           : 17 98 100 105 106 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 153 155 156 166 167
expression_comma_nest : 166 167
expression_opt       : 97 106 111
expression_statement : 88 107
for_clause           : 104
for_init_statement   : 106
function_decl        : 8 21 67
function_def         : 3 64
function_sign        : 20 50 69
function_type        : 28
generic_type         : 24
generics_specialization_list_opt : 42 43
generics_type        : 79 80
generics_type_comma_nest : 79 80
generics_type_list   : 57
generics_type_list_opt : 51 55 71
generics_type_range  : 83
generics_type_range_colon_opt : 82
if_statement         : 89
in_out               : 169
index_expr           : 142
int_literal_opt      : 46
interface_decl       : 11
interface_member_decl : 61
interface_member_decl_nest : 55 61
io_expr              : 146
iteration_statement  : 90
jump_statement       : 91
member_decl          : 59
member_decl_nest     : 51 59
member_declarator    : 63
member_expr          : 145
new_expr             : 144
new_interface        : 55
new_struct           : 51
operand              : 140
parameter_decl       : 72 76
parameter_decl_comma_nest : 72 76
parameter_decl_list_opt : 71
parameter_list       : 158
parameter_list_opt   : 157 160 161
primary_expr         : 134 155 160 161
reference_type       : 27
simple_type          : 22
start                : 0
statement            : 95 100 101 105 106
statement_else_opt   : 100
statement_nest       : 94 95
struct_decl          : 10
translation_unit     : 1 2 3
type_alias_decl      : 9
type_decl            : 5
type_function_decl   : 66 68
type_function_def    : 65
type_spec            : 12 18 46 49 69 70 74 156 157 161 162 164 169
type_spec_assigntype_opt : 71
type_spec_colon_opt  : 17 78
type_spec_comma_nest : 161 162 164
unary_expr           : 114
unary_operation_opt  : 134
variable_decl        : 6 92
while_clause         : 103

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . translation_unit
    (2) translation_unit -> . block_decl translation_unit
    (3) translation_unit -> . function_def translation_unit
    (4) translation_unit -> . empty
    (5) block_decl -> . type_decl SEMICOLON
    (6) block_decl -> . variable_decl SEMICOLON
    (7) block_decl -> . constant_decl SEMICOLON
    (8) block_decl -> . function_decl SEMICOLON
    (21) function_def -> . function_decl block_statement
    (172) empty -> .
    (9) type_decl -> . type_alias_decl
    (10) type_decl -> . struct_decl
    (11) type_decl -> . interface_decl
    (13) variable_decl -> . LET declarator declarator_nest
    (16) constant_decl -> . CONST declarator declarator_nest
    (20) function_decl -> . FUNC ID function_sign
    (12) type_alias_decl -> . TYPE ID ASSIGN type_spec
    (51) struct_decl -> . STRUCT ID new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE
    (55) interface_decl -> . INTERFACE ID new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE

    $end            reduce using rule 172 (empty -> .)
    LET             shift and go to state 13
    CONST           shift and go to state 14
    FUNC            shift and go to state 15
    TYPE            shift and go to state 16
    STRUCT          shift and go to state 17
    INTERFACE       shift and go to state 18

    start                          shift and go to state 1
    translation_unit               shift and go to state 2
    block_decl                     shift and go to state 3
    function_def                   shift and go to state 4
    empty                          shift and go to state 5
    type_decl                      shift and go to state 6
    variable_decl                  shift and go to state 7
    constant_decl                  shift and go to state 8
    function_decl                  shift and go to state 9
    type_alias_decl                shift and go to state 10
    struct_decl                    shift and go to state 11
    interface_decl                 shift and go to state 12

state 1

    (0) S' -> start .



state 2

    (1) start -> translation_unit .

    $end            reduce using rule 1 (start -> translation_unit .)


state 3

    (2) translation_unit -> block_decl . translation_unit
    (2) translation_unit -> . block_decl translation_unit
    (3) translation_unit -> . function_def translation_unit
    (4) translation_unit -> . empty
    (5) block_decl -> . type_decl SEMICOLON
    (6) block_decl -> . variable_decl SEMICOLON
    (7) block_decl -> . constant_decl SEMICOLON
    (8) block_decl -> . function_decl SEMICOLON
    (21) function_def -> . function_decl block_statement
    (172) empty -> .
    (9) type_decl -> . type_alias_decl
    (10) type_decl -> . struct_decl
    (11) type_decl -> . interface_decl
    (13) variable_decl -> . LET declarator declarator_nest
    (16) constant_decl -> . CONST declarator declarator_nest
    (20) function_decl -> . FUNC ID function_sign
    (12) type_alias_decl -> . TYPE ID ASSIGN type_spec
    (51) struct_decl -> . STRUCT ID new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE
    (55) interface_decl -> . INTERFACE ID new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE

    $end            reduce using rule 172 (empty -> .)
    LET             shift and go to state 13
    CONST           shift and go to state 14
    FUNC            shift and go to state 15
    TYPE            shift and go to state 16
    STRUCT          shift and go to state 17
    INTERFACE       shift and go to state 18

    block_decl                     shift and go to state 3
    translation_unit               shift and go to state 19
    function_def                   shift and go to state 4
    empty                          shift and go to state 5
    type_decl                      shift and go to state 6
    variable_decl                  shift and go to state 7
    constant_decl                  shift and go to state 8
    function_decl                  shift and go to state 9
    type_alias_decl                shift and go to state 10
    struct_decl                    shift and go to state 11
    interface_decl                 shift and go to state 12

state 4

    (3) translation_unit -> function_def . translation_unit
    (2) translation_unit -> . block_decl translation_unit
    (3) translation_unit -> . function_def translation_unit
    (4) translation_unit -> . empty
    (5) block_decl -> . type_decl SEMICOLON
    (6) block_decl -> . variable_decl SEMICOLON
    (7) block_decl -> . constant_decl SEMICOLON
    (8) block_decl -> . function_decl SEMICOLON
    (21) function_def -> . function_decl block_statement
    (172) empty -> .
    (9) type_decl -> . type_alias_decl
    (10) type_decl -> . struct_decl
    (11) type_decl -> . interface_decl
    (13) variable_decl -> . LET declarator declarator_nest
    (16) constant_decl -> . CONST declarator declarator_nest
    (20) function_decl -> . FUNC ID function_sign
    (12) type_alias_decl -> . TYPE ID ASSIGN type_spec
    (51) struct_decl -> . STRUCT ID new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE
    (55) interface_decl -> . INTERFACE ID new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE

    $end            reduce using rule 172 (empty -> .)
    LET             shift and go to state 13
    CONST           shift and go to state 14
    FUNC            shift and go to state 15
    TYPE            shift and go to state 16
    STRUCT          shift and go to state 17
    INTERFACE       shift and go to state 18

    function_def                   shift and go to state 4
    translation_unit               shift and go to state 20
    block_decl                     shift and go to state 3
    empty                          shift and go to state 5
    type_decl                      shift and go to state 6
    variable_decl                  shift and go to state 7
    constant_decl                  shift and go to state 8
    function_decl                  shift and go to state 9
    type_alias_decl                shift and go to state 10
    struct_decl                    shift and go to state 11
    interface_decl                 shift and go to state 12

state 5

    (4) translation_unit -> empty .

    $end            reduce using rule 4 (translation_unit -> empty .)


state 6

    (5) block_decl -> type_decl . SEMICOLON

    SEMICOLON       shift and go to state 21


state 7

    (6) block_decl -> variable_decl . SEMICOLON

    SEMICOLON       shift and go to state 22


state 8

    (7) block_decl -> constant_decl . SEMICOLON

    SEMICOLON       shift and go to state 23


state 9

    (8) block_decl -> function_decl . SEMICOLON
    (21) function_def -> function_decl . block_statement
    (94) block_statement -> . LBRACE statement_nest RBRACE

    SEMICOLON       shift and go to state 24
    LBRACE          shift and go to state 26

    block_statement                shift and go to state 25

state 10

    (9) type_decl -> type_alias_decl .

    SEMICOLON       reduce using rule 9 (type_decl -> type_alias_decl .)


state 11

    (10) type_decl -> struct_decl .

    SEMICOLON       reduce using rule 10 (type_decl -> struct_decl .)


state 12

    (11) type_decl -> interface_decl .

    SEMICOLON       reduce using rule 11 (type_decl -> interface_decl .)


state 13

    (13) variable_decl -> LET . declarator declarator_nest
    (17) declarator -> . ID type_spec_colon_opt ASSIGN expression

    ID              shift and go to state 28

    declarator                     shift and go to state 27

state 14

    (16) constant_decl -> CONST . declarator declarator_nest
    (17) declarator -> . ID type_spec_colon_opt ASSIGN expression

    ID              shift and go to state 28

    declarator                     shift and go to state 29

state 15

    (20) function_decl -> FUNC . ID function_sign

    ID              shift and go to state 30


state 16

    (12) type_alias_decl -> TYPE . ID ASSIGN type_spec

    ID              shift and go to state 31


state 17

    (51) struct_decl -> STRUCT . ID new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE

    ID              shift and go to state 32


state 18

    (55) interface_decl -> INTERFACE . ID new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE

    ID              shift and go to state 33


state 19

    (2) translation_unit -> block_decl translation_unit .

    $end            reduce using rule 2 (translation_unit -> block_decl translation_unit .)


state 20

    (3) translation_unit -> function_def translation_unit .

    $end            reduce using rule 3 (translation_unit -> function_def translation_unit .)


state 21

    (5) block_decl -> type_decl SEMICOLON .

    LET             reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    CONST           reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    FUNC            reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    TYPE            reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    STRUCT          reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    INTERFACE       reduce using rule 5 (block_decl -> type_decl SEMICOLON .)
    $end            reduce using rule 5 (block_decl -> type_decl SEMICOLON .)


state 22

    (6) block_decl -> variable_decl SEMICOLON .

    LET             reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    CONST           reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    FUNC            reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    TYPE            reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    STRUCT          reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    INTERFACE       reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)
    $end            reduce using rule 6 (block_decl -> variable_decl SEMICOLON .)


state 23

    (7) block_decl -> constant_decl SEMICOLON .

    LET             reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    CONST           reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    FUNC            reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    TYPE            reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    STRUCT          reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    INTERFACE       reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)
    $end            reduce using rule 7 (block_decl -> constant_decl SEMICOLON .)


state 24

    (8) block_decl -> function_decl SEMICOLON .

    LET             reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    CONST           reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    FUNC            reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    TYPE            reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    STRUCT          reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    INTERFACE       reduce using rule 8 (block_decl -> function_decl SEMICOLON .)
    $end            reduce using rule 8 (block_decl -> function_decl SEMICOLON .)


state 25

    (21) function_def -> function_decl block_statement .

    LET             reduce using rule 21 (function_def -> function_decl block_statement .)
    CONST           reduce using rule 21 (function_def -> function_decl block_statement .)
    FUNC            reduce using rule 21 (function_def -> function_decl block_statement .)
    TYPE            reduce using rule 21 (function_def -> function_decl block_statement .)
    STRUCT          reduce using rule 21 (function_def -> function_decl block_statement .)
    INTERFACE       reduce using rule 21 (function_def -> function_decl block_statement .)
    $end            reduce using rule 21 (function_def -> function_decl block_statement .)
    ID              reduce using rule 21 (function_def -> function_decl block_statement .)
    RBRACE          reduce using rule 21 (function_def -> function_decl block_statement .)


state 26

    (94) block_statement -> LBRACE . statement_nest RBRACE
    (95) statement_nest -> . statement statement_nest
    (96) statement_nest -> . empty
    (86) statement -> . decl_statement
    (87) statement -> . block_statement
    (88) statement -> . expression_statement
    (89) statement -> . if_statement
    (90) statement -> . iteration_statement
    (91) statement -> . jump_statement
    (172) empty -> .
    (92) decl_statement -> . variable_decl SEMICOLON
    (93) decl_statement -> . constant_decl SEMICOLON
    (94) block_statement -> . LBRACE statement_nest RBRACE
    (97) expression_statement -> . expression_opt SEMICOLON
    (100) if_statement -> . IF LPAREN expression RPAREN statement statement_else_opt
    (103) iteration_statement -> . while_clause
    (104) iteration_statement -> . for_clause
    (109) jump_statement -> . BREAK SEMICOLON
    (110) jump_statement -> . CONTINUE SEMICOLON
    (111) jump_statement -> . RETURN expression_opt SEMICOLON
    (13) variable_decl -> . LET declarator declarator_nest
    (16) constant_decl -> . CONST declarator declarator_nest
    (98) expression_opt -> . expression
    (99) expression_opt -> . empty
    (105) while_clause -> . WHILE LPAREN expression RPAREN statement
    (106) for_clause -> . FOR LPAREN for_init_statement expression_opt SEMICOLON expression RPAREN statement
    (112) expression -> . assign_expr
    (113) expression -> . binary_expr
    (114) expression -> . unary_expr
    (115) assign_expr -> . expression ASSIGN expression
    (116) binary_expr -> . expression PLUS expression
    (117) binary_expr -> . expression MINUS expression
    (118) binary_expr -> . expression MUL expression
    (119) binary_expr -> . expression DIV expression
    (120) binary_expr -> . expression AND expression
    (121) binary_expr -> . expression OR expression
    (122) binary_expr -> . expression XOR expression
    (123) binary_expr -> . expression MOD expression
    (124) binary_expr -> . expression LSHIFT expression
    (125) binary_expr -> . expression RSHIFT expression
    (126) binary_expr -> . expression LOGICAL_OR expression
    (127) binary_expr -> . expression LOGICAL_AND expression
    (128) binary_expr -> . expression NOT_EQUAL expression
    (129) binary_expr -> . expression EQUAL expression
    (130) binary_expr -> . expression LESS_EQUAL expression
    (131) binary_expr -> . expression LESS expression
    (132) binary_expr -> . expression GREATER_EQUAL expression
    (133) binary_expr -> . expression GREATER expression
    (134) unary_expr -> . unary_operation_opt primary_expr
    (135) unary_operation_opt -> . NOT
    (136) unary_operation_opt -> . LOGICAL_NOT
    (137) unary_operation_opt -> . PLUS
    (138) unary_operation_opt -> . MINUS
    (139) unary_operation_opt -> . empty

    RBRACE          reduce using rule 172 (empty -> .)
    SEMICOLON       reduce using rule 172 (empty -> .)
    INT             reduce using rule 172 (empty -> .)
    HEXADECIMAL     reduce using rule 172 (empty -> .)
    FLOAT           reduce using rule 172 (empty -> .)
    DOUBLE          reduce using rule 172 (empty -> .)
    STRING          reduce using rule 172 (empty -> .)
    ID              reduce using rule 172 (empty -> .)
    LPAREN          reduce using rule 172 (empty -> .)
    IN              reduce using rule 172 (empty -> .)
    OUT             reduce using rule 172 (empty -> .)
    VOID            reduce using rule 172 (empty -> .)
    BOOL            reduce using rule 172 (empty -> .)
    I8              reduce using rule 172 (empty -> .)
    U8              reduce using rule 172 (empty -> .)
    I16             reduce using rule 172 (empty -> .)
    U16             reduce using rule 172 (empty -> .)
    I32             reduce using rule 172 (empty -> .)
    U32             reduce using rule 172 (empty -> .)
    I64             reduce using rule 172 (empty -> .)
    U64             reduce using rule 172 (empty -> .)
    F16             reduce using rule 172 (empty -> .)
    F32             reduce using rule 172 (empty -> .)
    F64             reduce using rule 172 (empty -> .)
    INTERFACEID     reduce using rule 172 (empty -> .)
    STRUCTID        reduce using rule 172 (empty -> .)
    GENERICID       reduce using rule 172 (empty -> .)
    TYPEALIASID     reduce using rule 172 (empty -> .)
    LANGRBRACKET    reduce using rule 172 (empty -> .)
    LBRACE          shift and go to state 26
    IF              shift and go to state 46
    BREAK           shift and go to state 50
    CONTINUE        shift and go to state 51
    RETURN          shift and go to state 52
    LET             shift and go to state 13
    CONST           shift and go to state 14
    WHILE           shift and go to state 53
    FOR             shift and go to state 54
    NOT             shift and go to state 61
    LOGICAL_NOT     shift and go to state 62
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    statement_nest                 shift and go to state 34
    statement                      shift and go to state 35
    empty                          shift and go to state 36
    decl_statement                 shift and go to state 37
    block_statement                shift and go to state 38
    expression_statement           shift and go to state 39
    if_statement                   shift and go to state 40
    iteration_statement            shift and go to state 41
    jump_statement                 shift and go to state 42
    variable_decl                  shift and go to state 43
    constant_decl                  shift and go to state 44
    expression_opt                 shift and go to state 45
    expression                     shift and go to state 47
    while_clause                   shift and go to state 48
    for_clause                     shift and go to state 49
    assign_expr                    shift and go to state 55
    binary_expr                    shift and go to state 56
    unary_expr                     shift and go to state 57
    unary_operation_opt            shift and go to state 60

state 27

    (13) variable_decl -> LET declarator . declarator_nest
    (14) declarator_nest -> . COMMA declarator declarator_nest
    (15) declarator_nest -> . empty
    (172) empty -> .

    COMMA           shift and go to state 64
    SEMICOLON       reduce using rule 172 (empty -> .)

    declarator_nest                shift and go to state 63
    empty                          shift and go to state 65

state 28

    (17) declarator -> ID . type_spec_colon_opt ASSIGN expression
    (18) type_spec_colon_opt -> . COLON type_spec
    (19) type_spec_colon_opt -> . empty
    (172) empty -> .

    COLON           shift and go to state 67
    ASSIGN          reduce using rule 172 (empty -> .)

    type_spec_colon_opt            shift and go to state 66
    empty                          shift and go to state 68

state 29

    (16) constant_decl -> CONST declarator . declarator_nest
    (14) declarator_nest -> . COMMA declarator declarator_nest
    (15) declarator_nest -> . empty
    (172) empty -> .

    COMMA           shift and go to state 64
    SEMICOLON       reduce using rule 172 (empty -> .)

    declarator_nest                shift and go to state 69
    empty                          shift and go to state 65

state 30

    (20) function_decl -> FUNC ID . function_sign
    (71) function_sign -> . generics_type_list_opt LPAREN parameter_decl_list_opt RPAREN type_spec_assigntype_opt
    (57) generics_type_list_opt -> . generics_type_list
    (58) generics_type_list_opt -> . empty
    (79) generics_type_list -> . LANGRBRACKET generics_type generics_type_comma_nest RANGRBRACKET
    (172) empty -> .

    LANGRBRACKET    shift and go to state 74
    LPAREN          reduce using rule 172 (empty -> .)

    function_sign                  shift and go to state 70
    generics_type_list_opt         shift and go to state 71
    generics_type_list             shift and go to state 72
    empty                          shift and go to state 73

state 31

    (12) type_alias_decl -> TYPE ID . ASSIGN type_spec

    ASSIGN          shift and go to state 75


state 32

    (51) struct_decl -> STRUCT ID . new_struct generics_type_list_opt complex_type_colon_opt LBRACE member_decl_nest RBRACE
    (52) new_struct -> .

    LANGRBRACKET    reduce using rule 52 (new_struct -> .)
    COLON           reduce using rule 52 (new_struct -> .)
    LBRACE          reduce using rule 52 (new_struct -> .)

    new_struct                     shift and go to state 76

state 33

    (55) interface_decl -> INTERFACE ID . new_interface generics_type_list_opt LBRACE interface_member_decl_nest RBRACE
    (56) new_interface -> .

    LANGRBRACKET    reduce using rule 56 (new_interface -> .)
    LBRACE          reduce using rule 56 (new_interface -> .)

    new_interface                  shift and go to state 77

state 34

    (94) block_statement -> LBRACE statement_nest . RBRACE

    RBRACE          shift and go to state 78


state 35

    (95) statement_nest -> statement . statement_nest
    (95) statement_nest -> . statement statement_nest
    (96) statement_nest -> . empty
    (86) statement -> . decl_statement
    (87) statement -> . block_statement
    (88) statement -> . expression_statement
    (89) statement -> . if_statement
    (90) statement -> . iteration_statement
    (91) statement -> . jump_statement
    (172) empty -> .
    (92) decl_statement -> . variable_decl SEMICOLON
    (93) decl_statement -> . constant_decl SEMICOLON
    (94) block_statement -> . LBRACE statement_nest RBRACE
    (97) expression_statement -> . expression_opt SEMICOLON
    (100) if_statement -> . IF LPAREN expression RPAREN statement statement_else_opt
    (103) iteration_statement -> . while_clause
    (104) iteration_statement -> . for_clause
    (109) jump_statement -> . BREAK SEMICOLON
    (110) jump_statement -> . CONTINUE SEMICOLON
    (111) jump_statement -> . RETURN expression_opt SEMICOLON
    (13) variable_decl -> . LET declarator declarator_nest
    (16) constant_decl -> . CONST declarator declarator_nest
    (98) expression_opt -> . expression
    (99) expression_opt -> . empty
    (105) while_clause -> . WHILE LPAREN expression RPAREN statement
